[package]
name = "claim"
description = "Assertion macros"
version = "0.5.0"
authors = ["svartalf <self@svartalf.info>"]
license = "Apache-2.0 OR MIT"
categories = ["development-tools", "development-tools::testing", "no-std"]
keywords = ["assert", "test", "testing"]
homepage = "https://github.com/svartalf/rust-claim"
repository = "https://github.com/svartalf/rust-claim"
readme = "README.md"
build = "build.rs"
documentation = "https://docs.rs/claim/0.4.0"

[badges]
maintenance = { status = "actively-developed" }
github-actions = { repository = "svartalf/rust-claim", workflow = "Continuous integration" }

[build-dependencies]
autocfg = "~1.1"
